--- a/ExercicioFormulario/style.css
+++ b/ExercicioFormulario/style.css
@@ -20,6 +20,7 @@ body { /* Fonte do documento */
  border: 5px solid rgb(255, 255, 255);
  border-radius: 5px;
 }
+.formulario_campo:required
 .formulario_campo:invalid{
     border: 5px solid red;
 
