--- a/LOVT/style.css
+++ b/LOVT/style.css
@@ -1,2 +1,138 @@
-@import url('https://fonts.googleapis.com/css2?family=Ropa+Sans&display=swap');
+body{
+    margin: 0;
+    box-sizing: border-box;
+    font-style: normal;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    padding: 0 ;
+}
+header,main,aside,footer{    
+    border: solid red;
+    
+}
 
+header{grid-area: cabecalho;}
+main{grid-area: conteudo;}
+aside{grid-area: relacionados;}
+footer{ grid-area: rodape;}
+
+
+.l-app{
+    max-width: 600px;
+    min-height: 1240px;
+    display: grid;
+    gap: 25px;
+    grid-template-columns: 600px;
+    grid-template-rows: 80px 480px 400px 280px;
+    grid-template-areas:
+    "cabecalho"
+    "conteudo"
+    "relacionados"
+    "rodape";
+}
+header{
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    box-shadow: 0px 2px 20px rgba(0, 0, 0, 0.25);
+}
+.l-logo{
+    position: absolute;
+    width: 63px;
+    height:25px;
+    left: 20px;
+    font-weight: 400;
+    font-size: 40px;
+    line-height: 32px;
+    color: #777777;
+}
+.l-slogan{
+    position: absolute;
+    width: 80px;
+    height: 22px;
+    left: 140px;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 15px;
+    color: #AAAAAA;
+}
+.c-vector{
+    position: absolute;
+    width: 30px;
+    height: 22px;
+    right: 20px;
+    background-color: #ffffff;
+}
+aside{
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+}
+.l-h1{
+    position: absolute;
+    top: 0;
+    margin: 0;
+    font-size: 30px;
+    color: #888888;
+}
+.l-modelo{
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    
+}
+.l-img_modelo{
+    display: flex;
+    flex-direction: column;
+    width: 100px;
+    height: 60px;
+}
+
+footer{
+    display: flex;
+    position: relative;
+    justify-content: center;
+    align-items: center;
+    background-color: #333333;
+}
+.l-gps{
+    position: absolute;
+    top: 50px;
+    left: 30px;
+    border-radius:15px; 
+    width: 250px;
+    height: 170px;
+}
+.l-endereco{
+    position: absolute;
+    right: 11px;
+    top: 30px;
+    width: 240px;
+    height: 40px;
+    font-weight: 200;
+    font-size: 15px;
+    line-height: 25px;
+    color: #ffffff;
+}
+.l-social{
+    position: absolute;
+    right: 11px;
+    top: 140px;
+    width: 240px;
+    height: 20px;
+    font-weight: 200;
+    font-size: 17px;
+    line-height: 25px;
+    color: #ffffff;
+}
+.l-box_icons{
+    position: absolute;
+    width: 240px;
+    height: 20px;
+    right: 21px;
+    bottom: 65px;
+}
+.l-icons{
+    margin: 10px;
+}
